fix: troller update
